fixed menu alignment
alignment was supposed to change background alignment, not the menu's.

--- a/portfolio-css.css
+++ b/portfolio-css.css
@@ -19,7 +19,7 @@ body, html {
     width: 100%;
     background-color: #0e0f15;
     display: flex;
-    justify-content: right; /*background image-dependent*/
+    justify-content: center; /*background image-dependent*/
     align-items: center;
     
 }
@@ -54,7 +54,7 @@ body, html {
     max-height:100vh;
     min-height: 60vh;
     background-size:cover;
-    background-position:top;
+    background-position:right; /*background image-dependent*/
     background-repeat: no-repeat;
 
     /*color overlay*/
